# vexi

./: .gitignore  README.md  benchmark_llm_language.py  benchmark_llm_language_v2.py  benchmark_llm_language_v2_flat.py  benchmark_llm_language_v3.py  benchmark_llm_language_v3_flat.py  codebook.md  complex_arithmetic.vexi  dataset.jsonl  gerar_codigo_vexi.py  prompt_pre_projeto_llm_first_ufpa (1).md  pyproject.toml  run.py  saturacao_context.py  saturacao_context_rag.py  sum.vexi  sum_to_n.vexi  teste.py  treinar.py
core/: __init__.py  service.py  tools.py
examples/: complex_arithmetic.py  complex_arithmetic.vexi  sum.py  tictactoe.py
libs/graphics/: tools.py
vvm/: __init__.py  vvm.py
