[project]
name = "vexi"
version = "0.1.0"
description = ""
authors = [
    {name = "ANDRE RAFAEL CARDOSO REIS", email = "rafabatera-8@hotmail.com"}
]
# Removi a linha 'readme' para evitar o erro de arquivo não encontrado
requires-python = ">=3.11"
dependencies = [
    "matplotlib (>=3.10.0,<4.0.0)",
    "lmdb (>=1.7.5,<2.0.0)",
    "tiktoken (>=0.12.0,<0.13.0)",
    "transformers (>=4.30.0,<5.0.0)",
    "sentencepiece (>=0.2.1,<0.3.0)",
    # CORREÇÃO CRÍTICA: Protobuf ajustado para versão compatível com Google e ecossistema atual
    "protobuf (>=4.25.0,<6.0.0)", 
    "numpy (>=1.22,<2.4)",
    "numba (>=0.59.0,<0.65.0)",
    "openai (>=2.14.0,<3.0.0)",
    # Se quiser usar a lib nativa do Google, descomente abaixo:
    # "google-generativeai (^0.8.3)"
    "google-genai (>=1.56.0,<2.0.0)"
]

[tool.poetry]
# ISSO É O MAIS IMPORTANTE: Desativa a tentativa de criar um pacote instalável
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"